giramf/service-gira.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-gira
spec:
  selector:
    app: gira-backend
    type: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
      name: http-backend
      nodePort: 32117
